--- a/data/index.htm
+++ b/data/index.htm
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ESP8266 + FastLED by Evil Genius Labs</title>
+  <title>Moon Control</title>
 
   <!-- request CSS from internet CDN -->
   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
@@ -17,7 +17,7 @@
 
   <link rel="stylesheet" href="css/styles.css">
 
-  <link rel="icon" href="images/atom196.png">
+  <link rel="icon" href="images/icons8-mond-50.png">
 </head>
 
 <body>
@@ -31,16 +31,13 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="https://www.evilgeniuslabs.org" target="_blank"><img src="/images/atom196.png" style="width: 24px; height: 24px;" /></a>
-        <a class="navbar-brand" href="https://www.evilgeniuslabs.org" target="_blank">Evil Genius Labs</a>
+        <a class="navbar-brand" href="#"><img src="/images/icons8-mond-50.png" style="width: 25px; height: 25px;" /></a>
+        <a class="navbar-brand" href="#">Moon Control</a>
       </div>
       <div class="collapse navbar-collapse" id="navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="/">ESP8266 + FastLED <span class="sr-only">(current)</span></a></li>
-          <li><a href="/simple.htm" target="_blank" title="Simple Mode">Simple</a></li>
+          <li class="active"><a href="/">Control <span class="sr-only">(current)</span></a></li>
           <li><a href="/edit.htm" target="_blank" title="Edit Files">Files</a></li>
-          <li><a href="/update" target="_blank" title="Update Firmware">Firmware</a></li>
-          <li><a href="/wifi.htm" target="_blank" title="Wi-Fi Settings">Wi-Fi</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li>
